build/resources/test/LO-2/InvalidPrograms/test_7.lo
// Incorrect types for binary operation

int main(){
  int a, b;
  {
    a = (~3);
    b = 4;
    return ((a | b) & b);
  }
}